fix formatting errors, add readme

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!--- typewriter + greeting module -->
         <p id="welcomebox"></p>
         <script>
-            typewriteerWelcomePhrase(200);
+            typewriterWelcomePhrase(200);
         </script>
 
         <div class='parent'>
